--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .orange-color{
     color: orange;
 }
-section{
+.flexable-container{
     display: flex;
 }
 .half-width{
     width: 50%;
-    padding: 5%
+    padding:8% ;
 }
 .half-width img{
     width: 100%;
@@ -27,4 +31,44 @@ section{
 }
 .link-button:hover{
     background-image: linear-gradient(tomato,orange);
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    padding-bottom: 80px;
+    border-radius: 5px;
+    box-shadow: 10px 10px 40px gray;
+    margin-bottom: 150px;
+
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-dev{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+
+}
+#baby-dev{
+    border-left: 7px solid;
+    border-image: linear-gradient(tomato, orange);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+
 }
